<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_XTS_Interface" Id="{a2278546-b280-4b84-a95f-c0599ebc1ccd}">
    <Declaration><![CDATA[TYPE DUT_XTS_Interface :
STRUCT
	Targetpos: LREAL;
	Setpos: LREAL;
	Buddygap	: LREAL;
	Buddyenable	: BOOL;
	Buddyactive	: BOOL;
	MovementDone: BOOL;
	Clockwise: BOOL;
	Velocity: LREAL;
	Acceleration: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>